# tmxtool

./: .gitignore  CMakeLists.txt  README.md
doc/: config.yaml
doc/input/1/: 1.tmx
src/: main.cpp
